--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Pharath Palesuvaran
 email: phrth2@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description:
+#description: >- # this means to ignore newlines until "baseurl:"
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
@@ -61,7 +62,8 @@ plugins:
 author:
   name   : "Pharath Palesuvaran"
   avatar : "/assets/images/profile_pic.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Machine Learning, Computer Vision, Self-driving cars and a very rusty first degree in Physics"
+  #bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -74,7 +76,7 @@ author:
       url: "https://pharath.github.io/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/pharath_one"
+      url: "/_pages/404.md"
 
 footer:
   links:
