--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description:
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
-  Machine Learning, Computer Vision, Self-driving cars, Physics
+  Deep Learning and Self-Driving Cars.
 twitter_username: pharath_one
 github_username: pharath
 minimal_mistakes_skin: default
@@ -73,7 +73,7 @@ author:
       url: "https://twitter.com/pharath_one"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://pharath.github.io/"
+      url: "https://github.com/pharath"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "/_pages/404.md"
@@ -85,10 +85,10 @@ footer:
       url: "https://twitter.com/pharath_one"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://pharath.github.com/"
+      url: "https://github.com/pharath"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/pharath_one"
+      url: "/_pages/404.md"
 
 defaults:
   # _posts
