modification by phth

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ Gemfile.lock
 
 *.swp
 *.swo
+
+2010-01-07-post-modified.md
+2010-02-05-post-notice.md
+2019-04-18-welcome-to-jekyll.md
+2010-01-07-post-standard.md
+2010-02-05-post-quote.md
+2010-01-08-post-chat.md
+2010-03-07-post-link.md
