--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Gemfile.lock
 *.swp
 *.swo
 
+_posts
 _posts/2010-01-07-post-modified.md
 _posts/2010-02-05-post-notice.md
 _posts/2019-04-18-welcome-to-jekyll.md
