--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
       url: "https://github.com/pharath"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "/_pages/404.md"
+      url: "/_pages/doc.html"
 
 footer:
   links:
