modification by phth

--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,15 @@ description:
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
-  Deep Learning and Self-Driving Cars.
+  "Deep Learning and Self-Driving Cars."
 twitter_username: pharath_one
 github_username: pharath
 minimal_mistakes_skin: default
 search: true
+
+# phth:
+teaser: /assets/images/pytorch-vs-tensorflow.png
+logo: "/assets/images/pytorch-logo.png"
 
 # Build settings
 markdown: kramdown
